# bible_cli

./: CMakeLists.txt  Makefile  build.sh
src/: main.cc
